welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: value update is not a member of Boolean
		if (estSurBiscuit()=true) {
                    ^