welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit=false;
	var n=0;
	while (vuBiscuit==false) {
		avance();
		n=n+1;
		if (estSurBiscuit()=true) {
			vuBiscuit=true;
		}
	}
	recule(n);
	n=0;
	return true;
}
